Kaggle Notebook | Web Scraping_Py | Version 5

--- a/web-scraping-py.ipynb
+++ b/web-scraping-py.ipynb
@@ -3,20 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ddcb08db",
+   "id": "bcadbe76",
    "metadata": {
     "_kg_hide-input": true,
+    "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:40.551771Z",
-     "iopub.status.busy": "2022-05-30T12:46:40.551307Z",
-     "iopub.status.idle": "2022-05-30T12:46:52.793182Z",
-     "shell.execute_reply": "2022-05-30T12:46:52.791822Z"
+     "iopub.execute_input": "2022-05-30T12:53:53.624347Z",
+     "iopub.status.busy": "2022-05-30T12:53:53.623675Z",
+     "iopub.status.idle": "2022-05-30T12:54:09.143695Z",
+     "shell.execute_reply": "2022-05-30T12:54:09.142249Z"
     },
     "papermill": {
-     "duration": 12.250831,
-     "end_time": "2022-05-30T12:46:52.795524",
+     "duration": 15.531068,
+     "end_time": "2022-05-30T12:54:09.146492",
      "exception": false,
-     "start_time": "2022-05-30T12:46:40.544693",
+     "start_time": "2022-05-30T12:53:53.615424",
      "status": "completed"
     },
     "tags": []
@@ -28,7 +29,7 @@
      "text": [
       "Collecting openpyxl\r\n",
       "  Downloading openpyxl-3.0.10-py2.py3-none-any.whl (242 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.1/242.1 kB\u001b[0m \u001b[31m901.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.1/242.1 kB\u001b[0m \u001b[31m461.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
       "\u001b[?25hCollecting et-xmlfile\r\n",
       "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\r\n",
       "Installing collected packages: et-xmlfile, openpyxl\r\n",
@@ -45,21 +46,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5c8d5111",
+   "id": "d643387e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:52.806364Z",
-     "iopub.status.busy": "2022-05-30T12:46:52.805939Z",
-     "iopub.status.idle": "2022-05-30T12:46:52.993887Z",
-     "shell.execute_reply": "2022-05-30T12:46:52.992991Z"
+     "iopub.execute_input": "2022-05-30T12:54:09.160492Z",
+     "iopub.status.busy": "2022-05-30T12:54:09.159895Z",
+     "iopub.status.idle": "2022-05-30T12:54:09.394021Z",
+     "shell.execute_reply": "2022-05-30T12:54:09.392909Z"
     },
     "papermill": {
-     "duration": 0.195507,
-     "end_time": "2022-05-30T12:46:52.996248",
+     "duration": 0.244001,
+     "end_time": "2022-05-30T12:54:09.396660",
      "exception": false,
-     "start_time": "2022-05-30T12:46:52.800741",
+     "start_time": "2022-05-30T12:54:09.152659",
      "status": "completed"
     },
     "tags": []
@@ -77,19 +78,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88aeb35b",
+   "id": "7a838f17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:53.005798Z",
-     "iopub.status.busy": "2022-05-30T12:46:53.005431Z",
-     "iopub.status.idle": "2022-05-30T12:46:53.946462Z",
-     "shell.execute_reply": "2022-05-30T12:46:53.945487Z"
+     "iopub.execute_input": "2022-05-30T12:54:09.410398Z",
+     "iopub.status.busy": "2022-05-30T12:54:09.409967Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.263912Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.262936Z"
     },
     "papermill": {
-     "duration": 0.948699,
-     "end_time": "2022-05-30T12:46:53.948963",
+     "duration": 1.863701,
+     "end_time": "2022-05-30T12:54:11.266247",
      "exception": false,
-     "start_time": "2022-05-30T12:46:53.000264",
+     "start_time": "2022-05-30T12:54:09.402546",
      "status": "completed"
     },
     "tags": []
@@ -104,19 +105,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd7b4c7c",
+   "id": "d8b80eae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:53.958593Z",
-     "iopub.status.busy": "2022-05-30T12:46:53.957901Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.365726Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.364866Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.279666Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.279006Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.771950Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.770841Z"
     },
     "papermill": {
-     "duration": 0.415043,
-     "end_time": "2022-05-30T12:46:54.368010",
+     "duration": 0.50244,
+     "end_time": "2022-05-30T12:54:11.774396",
      "exception": false,
-     "start_time": "2022-05-30T12:46:53.952967",
+     "start_time": "2022-05-30T12:54:11.271956",
      "status": "completed"
     },
     "tags": []
@@ -129,19 +130,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a9312af5",
+   "id": "556320f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.377249Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.376749Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.405990Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.405035Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.787735Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.787190Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.829557Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.828329Z"
     },
     "papermill": {
-     "duration": 0.036036,
-     "end_time": "2022-05-30T12:46:54.407934",
+     "duration": 0.051709,
+     "end_time": "2022-05-30T12:54:11.831917",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.371898",
+     "start_time": "2022-05-30T12:54:11.780208",
      "status": "completed"
     },
     "tags": []
@@ -154,19 +155,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f8094ba2",
+   "id": "0df6ba1e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.417464Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.416777Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.444982Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.444122Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.845215Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.844809Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.888601Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.887553Z"
     },
     "papermill": {
-     "duration": 0.034845,
-     "end_time": "2022-05-30T12:46:54.446835",
+     "duration": 0.053305,
+     "end_time": "2022-05-30T12:54:11.891001",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.411990",
+     "start_time": "2022-05-30T12:54:11.837696",
      "status": "completed"
     },
     "tags": []
@@ -179,19 +180,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c87c3a5",
+   "id": "643b7162",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.456406Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.456059Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.462024Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.461015Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.904603Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.904113Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.908548Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.907648Z"
     },
     "papermill": {
-     "duration": 0.013298,
-     "end_time": "2022-05-30T12:46:54.464081",
+     "duration": 0.014026,
+     "end_time": "2022-05-30T12:54:11.910870",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.450783",
+     "start_time": "2022-05-30T12:54:11.896844",
      "status": "completed"
     },
     "tags": []
@@ -206,19 +207,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c83bd6f2",
+   "id": "4ffbd0d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.473612Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.473081Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.477349Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.476654Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.923940Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.923555Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.928435Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.927462Z"
     },
     "papermill": {
-     "duration": 0.011048,
-     "end_time": "2022-05-30T12:46:54.479073",
+     "duration": 0.014114,
+     "end_time": "2022-05-30T12:54:11.930734",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.468025",
+     "start_time": "2022-05-30T12:54:11.916620",
      "status": "completed"
     },
     "tags": []
@@ -233,19 +234,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9a7297dd",
+   "id": "dea11622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.488513Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.487909Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.491473Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.490888Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.944307Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.943654Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.947645Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.946911Z"
     },
     "papermill": {
-     "duration": 0.010315,
-     "end_time": "2022-05-30T12:46:54.493225",
+     "duration": 0.013215,
+     "end_time": "2022-05-30T12:54:11.949730",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.482910",
+     "start_time": "2022-05-30T12:54:11.936515",
      "status": "completed"
     },
     "tags": []
@@ -258,19 +259,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af658182",
+   "id": "50421864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.502524Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.501920Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.509377Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.508755Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.963697Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.963058Z",
+     "iopub.status.idle": "2022-05-30T12:54:11.971770Z",
+     "shell.execute_reply": "2022-05-30T12:54:11.970678Z"
     },
     "papermill": {
-     "duration": 0.014186,
-     "end_time": "2022-05-30T12:46:54.511263",
+     "duration": 0.018366,
+     "end_time": "2022-05-30T12:54:11.974192",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.497077",
+     "start_time": "2022-05-30T12:54:11.955826",
      "status": "completed"
     },
     "tags": []
@@ -283,19 +284,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cd9eae06",
+   "id": "709db9b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.521070Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.520343Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.585665Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.584682Z"
+     "iopub.execute_input": "2022-05-30T12:54:11.988159Z",
+     "iopub.status.busy": "2022-05-30T12:54:11.987746Z",
+     "iopub.status.idle": "2022-05-30T12:54:12.072590Z",
+     "shell.execute_reply": "2022-05-30T12:54:12.071169Z"
     },
     "papermill": {
-     "duration": 0.072826,
-     "end_time": "2022-05-30T12:46:54.588087",
+     "duration": 0.095008,
+     "end_time": "2022-05-30T12:54:12.075181",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.515261",
+     "start_time": "2022-05-30T12:54:11.980173",
      "status": "completed"
     },
     "tags": []
@@ -306,7 +307,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_d3e5f_\">\n",
+       "<table id=\"T_e42c2_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"col_heading level0 col0\" >ผลิตภัณฑ์</th>\n",
@@ -315,46 +316,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row0_col0\" class=\"data row0 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ E20:</td>\n",
-       "      <td id=\"T_d3e5f_row0_col1\" class=\"data row0 col1\" >42.74</td>\n",
+       "      <td id=\"T_e42c2_row0_col0\" class=\"data row0 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ E20:</td>\n",
+       "      <td id=\"T_e42c2_row0_col1\" class=\"data row0 col1\" >42.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row1_col0\" class=\"data row1 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ 91:</td>\n",
-       "      <td id=\"T_d3e5f_row1_col1\" class=\"data row1 col1\" >43.58 </td>\n",
+       "      <td id=\"T_e42c2_row1_col0\" class=\"data row1 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ 91:</td>\n",
+       "      <td id=\"T_e42c2_row1_col1\" class=\"data row1 col1\" >43.58 </td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row2_col0\" class=\"data row2 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ 95:</td>\n",
-       "      <td id=\"T_d3e5f_row2_col1\" class=\"data row2 col1\" >43.85 </td>\n",
+       "      <td id=\"T_e42c2_row2_col0\" class=\"data row2 col0\" >เชลล์ ฟิวเซฟ แก๊สโซฮอล์ 95:</td>\n",
+       "      <td id=\"T_e42c2_row2_col1\" class=\"data row2 col1\" >43.85 </td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row3_col0\" class=\"data row3 col0\" >เชลล์ วี-เพาเวอร์ แก๊สโซฮอล์ 95:</td>\n",
-       "      <td id=\"T_d3e5f_row3_col1\" class=\"data row3 col1\" >51.34 </td>\n",
+       "      <td id=\"T_e42c2_row3_col0\" class=\"data row3 col0\" >เชลล์ วี-เพาเวอร์ แก๊สโซฮอล์ 95:</td>\n",
+       "      <td id=\"T_e42c2_row3_col1\" class=\"data row3 col1\" >51.34 </td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row4_col0\" class=\"data row4 col0\" >เชลล์ ดีเซล B20:</td>\n",
-       "      <td id=\"T_d3e5f_row4_col1\" class=\"data row4 col1\" >31.94</td>\n",
+       "      <td id=\"T_e42c2_row4_col0\" class=\"data row4 col0\" >เชลล์ ดีเซล B20:</td>\n",
+       "      <td id=\"T_e42c2_row4_col1\" class=\"data row4 col1\" >31.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row5_col0\" class=\"data row5 col0\" >เชลล์ ฟิวเซฟ ดีเซล:</td>\n",
-       "      <td id=\"T_d3e5f_row5_col1\" class=\"data row5 col1\" >31.94</td>\n",
+       "      <td id=\"T_e42c2_row5_col0\" class=\"data row5 col0\" >เชลล์ ฟิวเซฟ ดีเซล:</td>\n",
+       "      <td id=\"T_e42c2_row5_col1\" class=\"data row5 col1\" >31.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row6_col0\" class=\"data row6 col0\" >เชลล์ ฟิวเซฟ ดีเซล B7:</td>\n",
-       "      <td id=\"T_d3e5f_row6_col1\" class=\"data row6 col1\" >31.94</td>\n",
+       "      <td id=\"T_e42c2_row6_col0\" class=\"data row6 col0\" >เชลล์ ฟิวเซฟ ดีเซล B7:</td>\n",
+       "      <td id=\"T_e42c2_row6_col1\" class=\"data row6 col1\" >31.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row7_col0\" class=\"data row7 col0\" >เชลล์ วี-เพาเวอร์ ดีเซล:</td>\n",
-       "      <td id=\"T_d3e5f_row7_col1\" class=\"data row7 col1\" >31.94</td>\n",
+       "      <td id=\"T_e42c2_row7_col0\" class=\"data row7 col0\" >เชลล์ วี-เพาเวอร์ ดีเซล:</td>\n",
+       "      <td id=\"T_e42c2_row7_col1\" class=\"data row7 col1\" >31.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_d3e5f_row8_col0\" class=\"data row8 col0\" >เชลล์ วี-เพาเวอร์ ดีเซล B7:</td>\n",
-       "      <td id=\"T_d3e5f_row8_col1\" class=\"data row8 col1\" >47.39</td>\n",
+       "      <td id=\"T_e42c2_row8_col0\" class=\"data row8 col0\" >เชลล์ วี-เพาเวอร์ ดีเซล B7:</td>\n",
+       "      <td id=\"T_e42c2_row8_col1\" class=\"data row8 col1\" >47.39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fd73f24a3d0>"
+       "<pandas.io.formats.style.Styler at 0x7f1bf92df790>"
       ]
      },
      "execution_count": 11,
@@ -369,19 +370,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f3fc56bd",
+   "id": "099c3f11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.597771Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.597403Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.601856Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.601026Z"
+     "iopub.execute_input": "2022-05-30T12:54:12.089649Z",
+     "iopub.status.busy": "2022-05-30T12:54:12.088881Z",
+     "iopub.status.idle": "2022-05-30T12:54:12.094712Z",
+     "shell.execute_reply": "2022-05-30T12:54:12.093776Z"
     },
     "papermill": {
-     "duration": 0.01147,
-     "end_time": "2022-05-30T12:46:54.603716",
+     "duration": 0.015332,
+     "end_time": "2022-05-30T12:54:12.096570",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.592246",
+     "start_time": "2022-05-30T12:54:12.081238",
      "status": "completed"
     },
     "tags": []
@@ -396,19 +397,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "64af56bc",
+   "id": "acebdd75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-30T12:46:54.613775Z",
-     "iopub.status.busy": "2022-05-30T12:46:54.613189Z",
-     "iopub.status.idle": "2022-05-30T12:46:54.754193Z",
-     "shell.execute_reply": "2022-05-30T12:46:54.753327Z"
+     "iopub.execute_input": "2022-05-30T12:54:12.110553Z",
+     "iopub.status.busy": "2022-05-30T12:54:12.109922Z",
+     "iopub.status.idle": "2022-05-30T12:54:12.283306Z",
+     "shell.execute_reply": "2022-05-30T12:54:12.282524Z"
     },
     "papermill": {
-     "duration": 0.148687,
-     "end_time": "2022-05-30T12:46:54.756578",
+     "duration": 0.182963,
+     "end_time": "2022-05-30T12:54:12.285631",
      "exception": false,
-     "start_time": "2022-05-30T12:46:54.607891",
+     "start_time": "2022-05-30T12:54:12.102668",
      "status": "completed"
     },
     "tags": []
@@ -439,14 +440,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 23.886718,
-   "end_time": "2022-05-30T12:46:55.482719",
+   "duration": 30.18824,
+   "end_time": "2022-05-30T12:54:13.013140",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-30T12:46:31.596001",
+   "start_time": "2022-05-30T12:53:42.824900",
    "version": "2.3.4"
   }
  },
